# practice

./: .gitignore  README.md  container.c  docker-compose.yml
assembly/: Dockerfile  Makefile  README.md  asm_func.s  docker-compose.yml  hello.s  loop.s  sum.c  total.c
c/: Makefile  benchmark.py  container.c  generate_parentheses.c  heap.c  loop.c  mmap.c  quick_sort.c  set.c  timer.c  tty.c
go/html-parser/: Makefile  go.mod
go/http-server/: Makefile  go.mod  goroutine.go  http-server  main.go
go/matrix/: go.mod  matrix.go  matrix_bench_test.go  matrix_test.go
leetcode/python/: README.md  pyproject.toml
leetcode/python/data_structures/: linked_list.py  tree.py
leetcode/python/solutions/: build_tree.py  delete_duplicates.py  first_unique_chara.py  group_anagram.py  has_path_sum.py  intersection.py  is_valid_bst.py  k_frequent.py  kth_largest.py  length_of_lis.py  level_order.py  linked_list_cycle.py  linked_list_cycle2.py  max_area_of_islands.py  max_depth.py  max_profit.py  (+13 more)
mtrace/: Makefile  mtrace.c
ptrace/: Dockerfile  Makefile  ptrace.c
ruby/hash_table/: Makefile  compile_commands.json  extconf.rb  hash_table.c  hash_table.h  my_hash_table.bundle  my_hash_table.c  test.rb
rust/: Cargo.toml  README.md
rust/async_rust/: Cargo.toml
rust/client/: Cargo.toml
rust/espanol/: Cargo.toml  README.md
rust/espanol/src/: builder.rs  dict.rs  lib.rs  lookup.rs  main.rs
rust/espanol/~/.espanol/: dictionary.db
rust/hello/: README.md  script.js
rust/my-redis/: Cargo.toml  README.md
rust/src/: lib.rs
tcp/: Makefile  client.c  endian.c  server.c
(+44 files in other folders)
