[package]
name = "espanol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
quick-xml = "0.31.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
tar = "0.4.40"
tempfile = "3.10.1"
xz2 = "0.1.7"
dirs = "5.0.1"
